2006-10-18  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: add support for the URL parameter
	(Closes: #362702), exit _fork if we don't have a URL
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_asf_parser),
	(totem_pl_parser_add_pls_with_contents), (totem_pl_parser_add_pls),
	(totem_pl_parser_add_asx), (totem_pl_parser_add_xspf):
	Fix return values, they're not gbooleans
	* src/totem-mozilla-viewer.c: (main): exit if we don't have any
	URLs passed, even when embedded

2006-10-18  James Livingston  <doclivingston@gmail.com>

	Initial Win32 porting stuff.

	* configure.in:
	* src/backend/bvw-test.c: (main):
	* src/backend/video-utils.c:
	* src/totem-screenshot.c: (totem_screenshot_temp_file):
	* src/totem-video-thumbnailer.c: (main):
	* src/totem.c: (main):

	* src/totem-scrsaver.c: (screensaver_enable_x11),
	(screensaver_disable_x11), (screensaver_init_x11),
	(totem_scrsaver_init), (totem_scrsaver_disable),
	(totem_scrsaver_enable), (totem_scrsaver_finalize): leave the
	implementation of this blank on non-X11 systems, and emit a warning.
	From #342926

2006-10-17  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemComplexPlugin.cpp: add "application/smil"
	as a supported mime-type, allows playback of
	http://www.koeln1.tv/stadtgeschichte/popup/schoolofcologne/popup.htm
	(Closes: #362917)

2006-10-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plparse/totem-disc.c: (cd_cache_has_medium), (cd_cache_free),
	(cd_cache_disc_is_cdda), (cd_cache_disc_is_vcd),
	(cd_cache_disc_is_dvd): remove support for HAL < 0.5, we shouldn't
	need that anymore now that we need so recent everything else
	(Closes: #362888)

2006-10-17  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_free): Don't close the
	(possibly shared) connection, and unref it instead. See
	http://www.j5live.com/?p=264 for details

2006-10-17  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/idl/Makefile.am: