@@ -1,3 +1,8 @@
+2006-10-21  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totemPlugin.cpp: Add basic support for Quicktime
+	URL extensions (Closes: #363825)
+
 2006-10-18  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/totemPlugin.cpp: add support for the URL parameter
